# dcs-maps

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
data/maps/: Afghanistan.miz  Caucasus.miz  GermanyCW.miz  MarianaIslands.miz  MarianaIslandsWWII.miz  Normandy.miz  PersianGulf.miz  README.md  SinaiMap.miz  Syria.miz
docs/: adding-a-map.md  developing.md  exports.md  how-it-works.md
exports/: maps.json  maps.md  maps.py  maps.yaml
src/dcs_coords/: __init__.py  calibrate.py  convert.py  export.py  ingest.py  maps.py
src/dcs_coords/data/: maps.schema.json  maps.yaml
tests/: conftest.py  test_calibration.py  test_cli.py  test_export.py  test_ingest.py  test_known_maps.py  test_maps.py
tools/: export_points.lua
