[project]
name = "dcs-maps-coordinates"
version = "0.1.0"
description = "Coordinates converter for DCS World Maps (lat/long <-> x,y, MGRS, UTM)"
authors = [{ name = "VEAF" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<4.0"
dependencies = [
    "pyproj>=3.6",
    "utm>=0.7.0",
    "mgrs>=1.4.0",
    "pyyaml (>=6.0.3,<7.0.0)",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
dcs-coords = "dcs_coords.calibrate:app"

[tool.poetry]
packages = [{ include = "dcs_coords", from = "src" }]
include = [{ path = "src/dcs_coords/data/**/*", format = ["sdist", "wheel"] }]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
